Weather functionality added with temperature and icon

--- a/thermostat_webserver/public/css/style.css
+++ b/thermostat_webserver/public/css/style.css
@@ -115,3 +115,8 @@ input:checked + .slider:before {
   text-decoration: none;
   font-size: 12px;
 }
+
+#weather {
+  text-decoration: none;
+  font-size: 12px;
+}
